--- a/app/src/main/res/layout/fragment_validacion_preview.xml
+++ b/app/src/main/res/layout/fragment_validacion_preview.xml
@@ -584,4 +584,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_validar_salida_fnd" />
 
+    <Button
+        android:id="@+id/btn_rechazar_fnd"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Rechazar"
+        app:layout_constraintEnd_toStartOf="@+id/guideline15"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline13"
+        app:layout_constraintTop_toBottomOf="@+id/btn_validar_salida_fnd" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
