--- a/app/src/main/res/layout/fragment_registro_carros.xml
+++ b/app/src/main/res/layout/fragment_registro_carros.xml
@@ -40,7 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <Button
 
+                android:id="@+id/btn_recorrido_frc"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:gravity="center"
+                android:layout_marginBottom="20dp"
+                android:text="Ver recorrido del vehiculo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:text="Nº Placa:"
@@ -198,10 +207,11 @@
                 android:id="@+id/et_sede"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
             <TextView
-                android:text="Kilometros:"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Kilometraje:" />
 
             <EditText
                   android:imeOptions="actionNext"
@@ -230,6 +240,7 @@
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_launcher_background"
                 android:layout_width="200dp"
+                android:scaleType="centerCrop"
                 android:layout_height="200dp"/>
 
             <Button
@@ -238,7 +249,6 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
                 android:gravity="center"
-                android:layout_marginBottom="50dp"
                 android:text="Registrar Vehiculo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
