--- a/app/src/main/res/layout/fragment_ordenes_programadas_item.xml
+++ b/app/src/main/res/layout/fragment_ordenes_programadas_item.xml
@@ -19,34 +19,42 @@
             android:layout_height="match_parent">
 
 
-
             <TextView
                 android:id="@+id/lbl_destino_fop_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Destino"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lbl_fecha_fop_item" />
-
-            <TextView
-                android:id="@+id/lbl_fecha_fop_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Fecha"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView22"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lbl_nombre_conductor_fop_item" />
 
             <TextView
+                android:id="@+id/lbl_fecha_fop_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="end"
+                android:text="Fecha"
+                app:layout_constraintBottom_toTopOf="@+id/textView22"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/lbl_destino_fop_item"
+                app:layout_constraintTop_toBottomOf="@+id/lbl_nombre_conductor_fop_item" />
+
+            <TextView
                 android:id="@+id/lbl_nombre_conductor_fop_item"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
                 android:text="Nombre Conductor"
+                app:layout_constraintEnd_toStartOf="@+id/estadoOrden"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,15 +64,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
                 android:background="#000"
                 android:padding="5dp"
                 android:text="VER PROGRAMACION"
                 android:textColor="#fff"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lbl_destino_fop_item" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/estadoOrden"
